#ifndef RECEMONEY_H
#define RECEMONEY_H

#include <QWidget>
#include <QDateTime>
#include "QRCode/qrencode.h"
#include "thread.h"
#include "dialog.h"
namespace Ui {
class receMoney;
}
class receMoney : public QWidget
{
    Q_OBJECT

public:
    explicit receMoney(QWidget *parent = 0);
     QPixmap createQRCode(const QString &text);
     Thread4  *thread4 = Thread4::GetInstance();
     Thread   *thread1 = Thread::GetInstance();
     Thread3  *thread3 = Thread3::GetInstance();
     QDateTime time;
     QString   Timestr;
      Dialog  *moneyChanage = Dialog::GetInstance();
    ~receMoney();
signals:
    void sendsignal();
private:
    Ui::receMoney *ui;
    void keyPressEvent( QKeyEvent *k );
    bool flat = false;
 private slots :
    void returnFun();
    void balanceChange(double);
    void GenerationTwoCode();
    void  TimeView();
    void netOpen(qint8);
    void netOutTime();
    void dialogClose();
};

#endif // RECEMONEY_H
